@@ -2508,7 +2508,7 @@ Short(s): \n\r\
 Allows your player to switch sessions with another character on the same \
 account.  If the other character is already logged on, then the \
 two players will switch sessions/screens; the window that the switch player is \
-typing in will now control the other character, and vis-a-versa.  If the other character \
+typing in will now control the other character, and vice versa.  If the other character \
 is NOT currently logged in, then this command will log the current player out and \
 quickly re-log the other character in, while remaining in the same connected session.
 
