@@ -22,7 +22,8 @@
   21. Races and Clan Governments now support parameters for granted abilities.
   22. New internal mob saving throws (more damage mitigators/enhancers), including weapon types.
   23. Bunch of new races for the outer planes.
-  24. New Thief Skills: Superstitious
+  24. New Thief Skills: Superstitious, Rope Swing, Improved Boarding, Locate Alcohol, Hold Your Liquor
+  25. Papermaking now supports containers, for gift bags, paper sacks, etc.
 # Build 5.9.3 Released 05/08/2016
    1. Follower behavior now has a few more options.
    2. STAT [MOBNAME] will now give full editor stats also, and 
